fixed the quote's author alignment

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ a {
 .quote p {
     font-weight: 1000;
     font-size: 20px;
-    align-self: flex-end;
+    margin-left: 700px;
 }
 
 .call-section {
